Build initial version of site

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dopey",
-  "homepage": "http://www.juliewinchester.io/sw/",
+  "homepage": "http://www.juliewinchester.io/dnd/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
