--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: self-hosted
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v2
